css/index.css
/* ... */
@media screen and (min-width: 768px) {
  #issue .worry .res {
    min-height: 2.8em;
    font-size: 1.6rem;
  }
  #issue .worry .res2 {
    margin-top: 1.6rem;
  }
}
#issue .worry .res::before {
  content: "";
  position: absolute;
  top: -50%;
  bottom: -50%;
  left: -50%;
  right: -50%;
  z-index: -10;
  margin: auto;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-size: cover;
}
@media screen and (max-width: 767px) {
  #issue .page1 .worry .res1::before {
    width: 23.35rem;
    height: 6.65rem;
    background-image: url(../images/bg_issue_worry1-1_sp.svg);
    translate: 7% -4%;
  }
  #issue .page1 .worry .res2::before {
    width: 28.65rem;
    height: 10.4rem;
    background-image: url(../images/bg_issue_worry1-2_sp.svg);
    translate: 0% -15%;
  }
  #issue .page1 .worry .res3::before {
    width: 23.5rem;
    height: 9.15rem;
    background-image: url(../images/bg_issue_worry1-3_sp.svg);
    translate: 0% -15%;
  }
  #issue .page2 .worry .res1::before {
    width: 32rem;
    height: 9.8rem;
    background-image: url(../images/bg_issue_worry2-1_sp.svg);
    background-size: contain;
    translate: 7% -4%;
  }
  #issue .page2 .worry .res2::before {
    width: 30rem;
    height: 10.1rem;
    background-image: url(../images/bg_issue_worry2-2_sp.svg);
    background-size: contain;
    translate: -1% -15%;
  }
  #issue .page2 .worry .res3::before {
    width: 31rem;
    height: 11rem;
    background-image: url(../images/bg_issue_worry2-3_sp.svg);
    background-size: contain;
    translate: -4% -10%;
  }
}
@media screen and (min-width: 768px) {
  #issue .page1 .worry .res1::before {
    width: 33rem;
    height: 9.5rem;
    background-image: url(../images/bg_issue_worry1-1.svg);
    background-size: contain;
    translate: 7% -4%;
  }
  #issue .page1 .worry .res2::before {
    width: 31rem;
    height: 12rem;
    background-image: url(../images/bg_issue_worry1-2.svg);
    background-size: contain;
    translate: 0 -15%;
  }
  #issue .page1 .worry .res3::before {
    width: 29.4rem;
    height: 8.8rem;
    background-image: url(../images/bg_issue_worry1-3.svg);
    background-size: contain;
    translate: -7% -7%;
  }
  #issue .page2 .worry .res1::before {
    width: 38rem;
    height: 11rem;
    background-image: url(../images/bg_issue_worry2-1.svg);
    background-size: contain;
    translate: 7% -4%;
  }
  #issue .page2 .worry .res2::before {
    width: 32rem;
    height: 11rem;
    background-image: url(../images/bg_issue_worry2-2.svg);
    background-size: contain;
    translate: 0 -12%;
  }
  #issue .page2 .worry .res3::before {
    width: 34rem;
    height: 10rem;
    background-image: url(../images/bg_issue_worry2-3.svg);
    background-size: contain;
    translate: -7% -9%;
  }
}

/* point */
#point {
  padding-bottom: 0;
}
@media screen and (min-width: 768px) {
  #point > .title {
    padding-top: 22.2rem;
    padding-bottom: 5.6rem;
    z-index: 5;
  }
  #point > .title em span {
    display: inline-block;
    height: 14.8rem;
    text-align: center;
  }
}
@media screen and (max-width: 767px) {
  #point > .title em.mult {
    mix-blend-mode: normal;
  }
  #point > .title em span {
    display: none;
  }
}
@media screen and (min-width: 768px) {
  #point h2 {
    padding-bottom: 5.4rem;
    font-size: 4.8rem;
  }
}
#point h2 .logo {
  padding-top: 0.2em;
  margin-right: 0.5em;
  display: inline-block;
  vertical-align: top;
  line-height: 1;
  font-size: inherit;
}
#point h2 img:first-of-type {
  margin-right: calc(13 / 48 * 1em);
  width: calc(52 / 48 * 1em);
}
#point h2 img:last-of-type {
  width: calc(390 / 48 * 1em);
}
#point h2 .spsm {
  display: inline-block;
}
@media screen and (max-width: 767px) {
  #point h2 {
    letter-spacing: 0;
    font-feature-settings: "palt";
  }
  #point h2 .spsm {
    font-size: 2rem;
  }
}
#point section {
  padding-top: 9rem;
  padding-bottom: 9rem;
  padding-left: calc(50vw - 50%);
  padding-right: calc(50vw - 50%);
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
}
#point section:first-of-type {
  padding-top: calc(9rem - 0.5rem);
}
@media screen and (min-width: 768px) {
  #point section {
    padding-top: 5.6rem;
    padding-bottom: 5.6rem;
    padding-left: calc((50vw - 1200 / 975 * 50%) + 22.5rem);
    padding-right: calc(50vw - 1200 / 975 * 50%);
    margin-left: calc((1200 / 975 * 50% - 50vw) - 22.5rem);
    margin-right: calc(1200 / 975 * 50% - 50vw);
    min-height: 45rem;
  }
  #point section:first-of-type {
    padding-top: 5.6rem;
  }
}
#point section:nth-of-type(even) {
  background-color: rgb(247, 247, 248);
}
@media screen and (max-width: 767px) {
  #point .wrap {
    display: flex;
    flex-direction: column;
  }
  #point .wrap > h3 {
    order: -20;
  }
  #point .wrap > h3 + .notes {
    order: -20;
  }
  #point .wrap > .mock {
    order: -10;
  }
}
@media screen and (min-width: 768px) {
  #point .wrap {
    display: grid;
    grid-template-columns: 47.9rem 46rem;
    grid-template-rows: auto auto auto;
    -moz-column-gap: 3.6rem;
    column-gap: 3.6rem;
    row-gap: 1.8rem;
  }
  #point .wrap > h3 {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }
  #point .wrap > h3 + .notes {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
  }
  #point .wrap > .desc,
  #point .wrap > .text {
    grid-column: 1 / 2;
    grid-row: 3 / 4;
  }
  #point .wrap > .mock {
    grid-column: 2 / 3;
    grid-row: 1 / 4;
  }
  #point section:nth-of-type(even) .wrap {
    grid-template-columns: 46rem 47.9rem;
  }
  #point section:nth-of-type(even) .wrap > h3 {
    grid-column: 2 / 3;
  }
  #point section:nth-of-type(even) .wrap > h3 + .notes {
    grid-column: 2 / 3;
  }
  #point section:nth-of-type(even) .wrap > .desc,
  #point section:nth-of-type(even) .wrap > .text {
    grid-column: 2 / 3;
  }
  #point section:nth-of-type(even) .wrap > .mock {
    grid-column: 1 / 2;
  }
}
/* ... */

